/*
 * $Id: ChangeLog,v 1.324 2007-03-14 14:19:43 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-14 08:16 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_print.prg
    * ::End() OLE method calls must be invoked only for Harbour.
    * Moved oPrintExcel and oPrintHoja to class' properties.

2007-03-10 15:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_window.ch
    * Blank space added on LOAD WINDOW definition.
  * source/h_button.prg
    ! Fixed text/image button type detection.
  * source/h_grid.prg
    ! Fixed some ::Value issues for TMultiGrid.
    * Modified ::ToExcel() implementation.
  * source/h_tree.prg
    * Fixed ItemId usage for ::AddItem().

2007-03-08 13:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed bug pressing DOWN key on MULTIGRID.
    + ::FirstSelectedItem() method added.
  * source/h_button.prg
    ! Fixed not caption shown (button is defined for IMAGE) when
      control is created with TButton():Define() without parameters.
    + ::DefineImage() method added. It creates control for IMAGE for
      TButton():DefineImage() syntax.

2007-03-04 13:32 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_xbrowse.prg
    ! Included missing ThisCell* info when ON EDITCELL is called.
  * doc/classes.txt
  * include/i_altsyntax.ch
  * include/i_browse.ch
  * source/h_browse.prg
    * TBROWSE class name moved to TOBROWSE (for avoid conflicts with
      Clipper's TBROWSE).
  * source/h_print.prg
    * Added OleUninitialize() function as a static funcion.

2007-02-22 20:44 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    ! Fixed ::Value result when no one row is selected.
  * source/h_print.prg
    * Changed "#ifdef __HARBOUR__" to "#ifndef __XHARBOUR__".
